# rustystats

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
analysis/: diagnostics.json
crates/rustystats/: Cargo.toml
crates/rustystats-core/: Cargo.toml
crates/rustystats-core/benches/: irls_benchmark.rs  spline_benchmark.rs
crates/rustystats-core/src/: constants.rs  convert.rs  error.rs  lib.rs
crates/rustystats-core/src/design_matrix/: mod.rs
crates/rustystats-core/src/diagnostics/: calibration.rs  dispersion.rs  distributions.rs  factor_diagnostics.rs  interactions.rs  loss.rs  mod.rs  model_fit.rs  negbinomial.rs  residuals.rs
crates/rustystats-core/src/families/: binomial.rs  gamma.rs  gaussian.rs  mod.rs  negative_binomial.rs  poisson.rs  quasi.rs  tweedie.rs
crates/rustystats-core/src/inference/: mod.rs
crates/rustystats-core/src/interactions/: mod.rs
crates/rustystats-core/src/links/: identity.rs  log.rs  logit.rs  mod.rs
crates/rustystats-core/src/regularization/: mod.rs  smurf_matrices.rs  smurf_proximal.rs  smurf_types.rs  smurf_weights.rs
crates/rustystats-core/src/solvers/: coordinate_descent.rs  gcv_optimizer.rs  irls.rs  mod.rs  nnls.rs  smooth_glm.rs  smurf.rs  smurf_lambda.rs
crates/rustystats-core/src/splines/: mod.rs  penalized.rs
crates/rustystats-core/src/target_encoding/: mod.rs
crates/rustystats-core/tests/: property_tests.rs
crates/rustystats/src/: design_matrix_py.rs  diagnostics_py.rs  export_onnx_py.rs  families_py.rs  fitting_py.rs  inference_py.rs  lib.rs  results_py.rs  splines_py.rs  target_encoding_py.rs
docs/: index.md
docs/getting-started/: installation.md
docs/maintenance/: performance.md  testing.md
docs/rust-guide/: code-walkthrough.md
examples/: b_spline_monotonic.ipynb  exp_reparam_prototype.py
examples/analysis/: diagnostics.json
python/rustystats/: __init__.py  _rustystats.pyi  constants.py  exceptions.py  export_onnx.py  export_pmml.py  families.py  formula.py  glm.py  interactions.py  links.py  regularization_path.py  smooth.py  splines.py  target_encoding.py  validation.py
python/rustystats/diagnostics/: __init__.py  api.py  components.py  computer.py  explorer.py  factors.py  interactions.py  types.py  utils.py
tests/python/: test_comparison.py  test_diagnostics.py  test_dict_api.py  test_export.py  test_families.py  test_frequency_encoding.py  test_interactions.py  test_lasso_credibility.py  test_links.py  test_target_encoding.py
