# =============================================================================
# RustyStats - Python Package Configuration
# =============================================================================
# This file configures how the Python package is built and what it depends on.
#
# We use "maturin" as our build backend, which:
#   - Compiles the Rust code
#   - Creates the Python bindings
#   - Packages everything into a wheel (.whl) file
#
# INSTALLATION:
# -------------
# For development: uv run maturin develop
# For production:  uv add rustystats
# =============================================================================

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rustystats"
version = "0.6.2"
description = "Fast Generalized Linear Models with a Rust backend - statsmodels compatible"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
]
keywords = ["statistics", "glm", "actuarial", "regression", "modeling"]

# Python package dependencies (minimal for users)
dependencies = [
    "numpy>=1.20",
    "polars>=1.0",
]

[project.optional-dependencies]
# Extra dependencies for development/testing
dev = [
    "pytest>=7.0",
    "statsmodels>=0.14",  # For comparison testing
    "maturin>=1.4",
    "jupyter>=1.0",
    "ipykernel>=6.31.0",  # For Jupyter notebook support
    "pyarrow>=14.0",
    "psutil>=5.9",  # For memory benchmarking
]

[project.urls]
Repository = "https://github.com/PricingFrontier/rustystats"
Documentation = "https://github.com/PricingFrontier/rustystats#readme"

# =============================================================================
# Maturin Configuration
# =============================================================================
[tool.maturin]
# Path to the Rust crate that builds the Python extension
manifest-path = "crates/rustystats/Cargo.toml"

# Include Python source files in the package
python-source = "python"

# Which Python files to include
module-name = "rustystats._rustystats"

# Build features
features = ["pyo3/extension-module"]

# =============================================================================
# Testing Configuration (pytest)
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Show extra test summary info
addopts = "-v --tb=short"

# =============================================================================
# Ruff Configuration (Python linter + formatter)
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter where possible)
    "E741",    # ambiguous variable name (l, O, I) — used in math code
    "RUF002",  # ambiguous unicode in docstring (μ, η, β used in formulas)
    "RUF003",  # ambiguous unicode in comment
    "E402",    # module-level import not at top — deferred imports are intentional
    "B028",    # no explicit stacklevel in warnings.warn
    "B905",    # zip without strict= parameter
    "SIM108",  # use ternary operator — readability preference
    "SIM102",  # collapsible if — readability preference
    "SIM103",  # return condition directly — readability preference
    "RUF001",  # ambiguous unicode in string literal
    "RUF005",  # collection concatenation — readability preference
    "RUF022",  # __all__ not sorted
    "B904",    # raise from within except — existing code pattern
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["RUF022"]  # __all__ ordering in package init files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Mypy Configuration (Python type checker — informational, not enforced in CI)
# =============================================================================
[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "glum>=3.1.2",
    "ipykernel>=6.31.0",
    "matplotlib>=3.10.8",
    "maturin>=1.10.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "numpy>=2.0.2",
    "onnxruntime>=1.24.3",
    "pymdown-extensions>=10.19.1",
    "pypmml>=1.5.8",
    "pytest>=8.4.2"
]
